# cpdb-backend-cups

./: .gitignore  CHANGES.md  README.md  configure.ac
.github/workflows/: build.yml  codeql.yml
snap/: snapcraft.yaml
snap/local/: run-cpdb-backend-cups
src/: Auth.c  Makefile.am  auth.h  backend_helper.c  backend_helper.c.save  backend_helper.h  config.cfg  print_backend_cups.c  run-tests.sh  test-internal.h  test_extractHostFromURI.c
